<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="16dp"
    android:paddingHorizontal="16dp"
    tools:context=".DetailUserActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <ImageView
        android:id="@+id/ivUserPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/user_profile_image" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvUserFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/users_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvUserPhoto" />

    <TextView
        android:id="@+id/tvCompanyLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvUserFullName"
        app:layout_constraintStart_toStartOf="@+id/tvUserFullName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserFullName"
        tools:text="@string/company_name" />

    <TextView
        android:id="@+id/tvRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyLocation"
        tools:text="@string/dummy_repositories" />

    <TextView
        android:id="@+id/tvFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/tvFollowings"
        app:layout_constraintStart_toEndOf="@+id/tvRepository"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyLocation"
        tools:text="@string/dummy_followers" />

    <TextView
        android:id="@+id/tvFollowings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyLocation"
        tools:text="@string/dummy_followings" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlDetailUser"
        android:layout_marginTop="5dp"
        app:tabSelectedTextColor="@color/color_4d585c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlDetailUser" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        app:fabCustomSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_inactive_24"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>